@@ -10,7 +10,7 @@ argparse = 1.1
 codecov = 1.6.3
 collective.recipe.omelette = 0.16
 coverage = 4.0.3
-crate = 0.19.2
+crate = 0.20.0
 docutils = 0.12
 gp.recipe.tox = 0.4
 hexagonit.recipe.download = 1.7.1
